2017-04-27 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update manual for --std-sdcc99 vs. --std-c11 change.
	* device/lib/tlcs90/crt0.s:
	  Fix bug #2583.

2017-04-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.c (newEnumType): fixed bug 2545
	* support/regression/tests/enum.c: added test
	* support/regression/tests/bug-2590.c: disabled for non-z80

2017-04-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (assignBit): disabled to fix a warning
	* src/SDCCicode.c (geniCodeLeftShift): fixed bug, replaced TABs
	* src/SDCCralloc.hpp (create_cfg): fixed warning, replaced TABs
	* src/SDCCsymt.c (computeType): fixed bug #2585
	* src/stm8/ralloc2.cc (assign_operands_for_cost): fixed warning, replaced TABs
	* src/z80/gen.c (genLeftShift, genRightShift): fixed warning
	* src/z80/peep.c (z80SurelyWrites): fixed warning
	* support/regression/tests/gcc-torture-execute-20020201-1.c
	* support/regression/tests/bug-2585.c: new, added

2017-04-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c,
	  support/regression/tests/bug-2601.c:
	  Fix bug #2601.

2017-04-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Minor improvement in Z180 support from z88dk patch.

2017-04-12 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/smallc.c:
	  Disable Small-C test for mcs51.

2017-04-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCast.c,
	  support/regression/tests/bug-2596.c:
	  Fix bug #2598 by not inlining calls to functions with variable arguments.

2017-04-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmem.c:
	  Fix bug #2591.
	* support/regression/tests/smallc.c:
	  Do not try to test __smallc for host.
	* src/SDCCsymt.c:
	  Always specify signedness for char in debug dumps.
	* support/regression/tests/bug-2539.c:
	  Test for bug #2539.
	* src/z80/peeph-z80.def,
	  src/z80/peeph-tlcs90.def,
	  src/z80/peeph-r2k.def:
	  Fix bug #2597.
	* src/SDCCglue.c: