@@ -4,7 +4,7 @@
 
 #include <testfwk.h>
 
-#ifdef __SDCC_z80
+#if (defined __SDCC_z80 || defined __SDCC_z180 || defined __SDCC_gbz80 || defined __SDCC_z180 || defined __SDCC_r2k || defined __SDCC_r3ka || defined __SDCC_stm8)
 
 #pragma disable_warning 85
 
